[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Armen Zambrano G.", email = "armenzg@sentry.io"},
]
dependencies = [
    "delocate~=0.10",
    "wheel~=0.37",
]
requires-python = ">=3.8"
dynamic = ["classifiers"]
license = {text = "MIT"}

[project.urls]
homepage = ""

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
